--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -99,9 +99,9 @@
         <section>
             <section>
                 <h3>Codebase</h3>
-                <p>~24 developers last year, 79 total</p>
+                <p class="fragment roll-in highlight-current-green">~24 developers last year, 79 total</p>
 
-                <p class="fragment">
+                <p class="fragment" style="color:#17ff2e">
                     ~1500 code changes (up ~50%)
                     <img src="img/commits.jpg" alt="Y U NO LOAD">
                 </p>
@@ -147,8 +147,9 @@
 
         <section>
             <h3>Community</h3>
-            <p>~2100 mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-user/">semediawiki-user</a></p>
-            <p>~500 mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
+            <p class="fragment"><span style="color:#17ff2e">~2100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-user/">semediawiki-user</a></p>
+            <p class="fragment"><span style="color:#17ff2e">~500</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
+            <p class="fragment"><span style="color:#17ff2e">~5700</span> edits and <span style="color:#17ff2e">~1200</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
         </section>
 
 
