--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -119,7 +119,9 @@
             <section>
                 <h3>Tests</h3>
                 <p>
-
+                <span style="color:#ff1717" class="fragment">0%</span>
+                    <span class="fragment">&#10140; <span style="color:#ffff17">~20%</span></span>
+                    <span class="fragment">&#10140; <span style="color:#17ff2e">66%</span></span>
                 </p>
             </section>
         </section>
