--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -123,6 +123,7 @@
                     <span class="fragment">&#10140; <span style="color:#ffff17">~20%</span></span>
                     <span class="fragment">&#10140; <span style="color:#17ff2e">66%</span></span>
                 </p>
+                <p class="fragment"><span style="color:#17ff2e">~2500</span> tests</p>
             </section>
         </section>
 
@@ -145,6 +146,13 @@
                     <img src="img/travis.jpg" alt="Y U NO LOAD">
                 </p>
             </section>
+
+            <section data-transition="linear">
+                <p>
+                    <img src="img/scrutinizer_rating.jpg" alt="Y U NO LOAD">
+                    <img src="img/scrutinizer.jpg" alt="Y U NO LOAD">
+                </p>
+            </section>
         </section>
 
         <section>
@@ -152,9 +160,10 @@
             <p class="fragment"><span style="color:#17ff2e">~2100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-user/">semediawiki-user</a></p>
             <p class="fragment"><span style="color:#17ff2e">~500</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
             <p class="fragment"><span style="color:#17ff2e">~5700</span> edits and <span style="color:#17ff2e">~1200</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
+            <p class="fragment">
+                <span style="color:#17ff2e">174</span> issues
+                <span class="fragment">, including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;21</span> feature requests</span></p>
         </section>
-
-
 
         <section data-state="blackout" data-transition="linear">
             <h2>SMW 1.9.x</h2>
