Add to SMWCon yearly

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -165,20 +165,105 @@
                 <span class="fragment">, including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;21</span> feature requests</span></p>
         </section>
 
-        <section data-state="blackout" data-transition="linear">
-            <h2>SMW 1.9.x</h2>
+        <section>
+            <section data-state="blackout" data-transition="linear">
+                <h2>SMW 1.9.x</h2>
+            </section>
+
+            <section>
+                <h3>Special:Concepts</h3>
+                <p>
+                    <img src="img/smw-19-special-concepts.png" alt="Special:Concepts">
+                </p>
+            </section>
+
+            <section>
+                <h3>Special:Statistics</h3>
+                <p>
+                    <img src="img/smw-19-special-statistics.png" alt="Special:Statistics">
+                </p>
+            </section>
+
+            <section>
+                <h3>Special:Properties</h3>
+                <p>
+                    Search form for user-defined properties
+                    <img src="img/smw-19-special-properties.png" alt="Special:Properties">
+                </p>
+            </section>
+
+            <section>
+                <h3>ApiInfo</h3>
+                <p>api.php?action=smwinfo</p>
+                <p>
+                    <img src="img/smw-19-api-smwinfo-xml.png" alt="ApiInfo">
+                    <img src="img/smw-19-api-smwinfo-json.png" alt="ApiInfo">
+                </p>
+            </section>
+
+            <section>
+                <h3>SMW\Api\BrowseBySubject</h3>
+                <p>api.php?action=browsebysubject</p>
+                <img src="img/smw-19-api-browse.png" alt="BrowseBySubject">
+            </section>
+
+            <section>
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">New special properties: media type & MIME type</li>
+                    <li class="fragment roll-in highlight-current-green">Factbox for historical data (on action=history)</li>
+                    <li class="fragment roll-in highlight-current-green">Added --query parameter to refreshData.php</li>
+                    <li class="fragment roll-in highlight-current-green">...</li>
+                </ul>
+            </section>
+
+            <section>
+                <img src="img/composer.jpeg" alt="Y U NO LOAD">
+            </section>
         </section>
 
-        <section data-state="blackout" data-transition="linear">
-            <h2>SMW 2.0</h2>
+        <section>
+            <section data-state="blackout" data-transition="linear">
+                <h2>SMW 2.0</h2>
+            </section>
+
+            <section>
+                <p>Stability and quality</p>
+            </section>
+
+            <section>
+                <p>Improved SPARQLStore support</p>
+                <img src="img/sparql.jpg" />
+            </section>
+
+            <section>
+                <h3>Improved subobjects</h3>
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">Now added to the RDF export</li>
+                    <li class="fragment roll-in highlight-current-green">Sorting support via @sortkey annotation</li>
+                </ul>
+            </section>
         </section>
 
-        <section data-state="blackout" data-transition="linear">
+        <section data-background="#005555" data-transition="linear" data-background-transition="slide">
             <h2>SMW 2.1</h2>
         </section>
 
-        <section data-state="blackout" data-transition="linear">
+        <section data-background="#005566" data-transition="linear" data-background-transition="slide">
+            <h3>Semantic Special:Search</h3>
+        </section>
+
+        <section data-background="#006655" data-transition="linear" data-background-transition="slide">
             <h3>Contributing to the project</h3>
+
+            <ul>
+                <li class="fragment roll-in highlight-current-green">File bugs you find and enhancements you want</li>
+                <li class="fragment roll-in highlight-current-green">Add or enhance documentation</li>
+                <li class="fragment roll-in highlight-current-green">Add or enhance translations</li>
+                <li class="fragment roll-in highlight-current-green">Answer questions and participate in discussions</li>
+                <li class="fragment roll-in highlight-current-green">Contribute code (correctly)</li>
+            </ul>
+
+            <p class="fragment" style="color:#17ff2e">Small and simple contributions are much appreciated</p>
         </section>
 
         <section data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
@@ -186,8 +271,6 @@
                 <img src="img/cat_question2.jpg" />
 
                 <br /><br />bit.ly/2014-smw<br /><br />
-
-                Your ideas and support are welcome!
             </p>
         </section>
 
@@ -204,8 +287,9 @@
         <section data-state="blackout">
             <h3>Special:Attribution</h3>
             <ul>
+                <li>The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
                 <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
-                <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
+                <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2014 Hakim El Hattab</li>
             </ul>
         </section>
 
