Add sem search slides

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -248,11 +248,19 @@
             <h2>SMW 2.1</h2>
         </section>
 
+        <section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
+        <section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
+
         <section data-background="#005566" data-transition="linear" data-background-transition="slide">
-            <h3>Semantic Special:Search</h3>
+            <p style="color:#97fffe">Performance enhancements</p>
+            <p style="color:#97fffe" class="fragment">HHVM 3.3+ support</p>
         </section>
 
-        <section data-background="#006655" data-transition="linear" data-background-transition="slide">
+        <section data-background="#006060" data-transition="linear" data-background-transition="slide">
+            <p style="color:#ffffff">Beyond 2.1?</p>
+        </section>
+
+        <section data-background="#006650" data-transition="linear" data-background-transition="slide">
             <h3>Contributing to the project</h3>
 
             <ul>
@@ -263,7 +271,7 @@
                 <li class="fragment roll-in highlight-current-green">Contribute code (correctly)</li>
             </ul>
 
-            <p class="fragment" style="color:#17ff2e">Small and simple contributions are much appreciated</p>
+            <p class="fragment" style="color:#17ff2e"><br />Small and simple contributions are much appreciated</p>
         </section>
 
         <section data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
