Add teamwork cats and flying hamsters

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -231,6 +231,10 @@
             </section>
 
             <section>
+                <img src="img/bounce.gif" width="500px" />
+            </section>
+
+            <section>
                 <p>Improved SPARQLStore support</p>
                 <img src="img/sparql.jpg" />
             </section>
@@ -258,6 +262,7 @@
 
         <section data-background="#006060" data-transition="linear" data-background-transition="slide">
             <p style="color:#ffffff">Beyond 2.1?</p>
+            <img src="img/teamwork.gif" width="500px" />
         </section>
 
         <section data-background="#006650" data-transition="linear" data-background-transition="slide">
