--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -273,6 +273,7 @@
                 <li class="fragment roll-in highlight-current-green">Add or enhance documentation</li>
                 <li class="fragment roll-in highlight-current-green">Add or enhance translations</li>
                 <li class="fragment roll-in highlight-current-green">Answer questions and participate in discussions</li>
+                <li class="fragment roll-in highlight-current-green">Code review</li>
                 <li class="fragment roll-in highlight-current-green">Contribute code (correctly)</li>
             </ul>
 
