Fix the evil 1px line that made FoxT unhappy

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -99,7 +99,7 @@
         <section>
             <section>
                 <h3>Codebase</h3>
-                <p class="fragment roll-in highlight-current-green">~24 developers last year, 79 total</p>
+                <p class="fragment highlight-current-green" >~24 developers last year, 79 total</p>
 
                 <p class="fragment" style="color:#17ff2e">
                     ~1500 code changes (up ~50%)
