Add search by prop slides

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -99,7 +99,7 @@
         <section>
             <section>
                 <h3>Codebase</h3>
-                <p class="fragment highlight-current-green" >~24 developers last year, 79 total</p>
+                <p class="fragment highlight-current-green">~24 developers last year, 79 total</p>
 
                 <p class="fragment" style="color:#17ff2e">
                     ~1500 code changes (up ~50%)
@@ -127,7 +127,7 @@
             </section>
         </section>
 
-        <section>
+        <section data-transition="none">
             <section>
                 <p>
                     Continuous integration!<br />
@@ -147,10 +147,9 @@
                 </p>
             </section>
 
-            <section data-transition="linear">
+            <section data-transition="none" data-background="img/scrutinizer.png">
                 <p>
                     <img src="img/scrutinizer_rating.jpg" alt="Y U NO LOAD">
-                    <img src="img/scrutinizer.jpg" alt="Y U NO LOAD">
                 </p>
             </section>
         </section>
@@ -254,6 +253,16 @@
 
         <section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
         <section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
+
+        <section data-transition="linear" data-background-transition="slide">
+            <section data-background="#006655" data-transition="linear" data-background-transition="slide">
+                <img src="img/search-by-prop-old.png" />
+            </section>
+
+            <section data-background="#005555" data-transition="linear" data-background-transition="slide">
+                <img src="img/search-by-prop-new.png" />
+            </section>
+        </section>
 
         <section data-background="#005566" data-transition="linear" data-background-transition="slide">
             <p style="color:#97fffe">Performance enhancements</p>
