Improve tests slide

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -123,7 +123,15 @@
                     <span class="fragment">&#10140; <span style="color:#ffff17">~20%</span></span>
                     <span class="fragment">&#10140; <span style="color:#17ff2e">66%</span></span>
                 </p>
-                <p class="fragment"><span style="color:#17ff2e">~2500</span> tests</p>
+                <p class="fragment"><br />
+                    SMW 1.8: <span style="color:#17ff2e">~0</span><br />
+                    &#8595;<br />
+                    SMW 1.9: <span style="color:#17ff2e">~1300</span><br />
+                    &#8595;<br />
+                    SMW 2.0: <span style="color:#17ff2e">~2300</span><br />
+                    &#8595;<br />
+                    SMW 2.1: <span style="color:#17ff2e">~2500</span>
+                </p>
             </section>
         </section>
 
