Add wikiapiary sem stats

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -209,7 +209,11 @@
             </section>
 
             <section>
-                <h3>SMW\Api\BrowseBySubject</h3>
+                <img src="img/wikiapiary-sem-stats.png" />
+            </section>
+
+            <section>
+                <h3>BrowseBySubject API module</h3>
                 <p>api.php?action=browsebysubject</p>
                 <img src="img/smw-19-api-browse.png" alt="BrowseBySubject">
             </section>
