--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -89,7 +89,7 @@
                     <span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">0</span>.<span style="color:#ccccff">0</span>
                 </p>
 
-                <p class="fragment">Want only bugfxies? <span class="fragment">&#10140; <span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">0</span>.<span style="color:#ccccff">x</span></span></p>
+                <p class="fragment">Want only bugfixes? <span class="fragment">&#10140; <span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">0</span>.<span style="color:#ccccff">x</span></span></p>
                 <p class="fragment">New features but no b/c breaks? <span class="fragment">&#10140; <span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">x</span></span></p>
 
                 <p class="fragment"><a href="http://semver.org/">semver.org</a></p>
