Add first wikibase slide

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -42,8 +42,15 @@
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
-
-
+        <section>
+            <h2>Wikibase</h2>
+            <h4>The Software behind Wikidata</h4>
+            <p>
+                Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                bit.ly/wikibase-smwcon<br /><br />
+                <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2014/Wikibase,_the_Software_behind_Wikidata">SMWCon Fall 2014, Vienna</a>
+            </p>
+        </section>
     </div>
 
 </div>
