Add to Wikibase slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -51,6 +51,86 @@
                 <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2014/Wikibase,_the_Software_behind_Wikidata">SMWCon Fall 2014, Vienna</a>
             </p>
         </section>
+
+        <section>
+            <h3>Overview</h3>
+            <ul>
+                <li class="fragment highlight-current-green">What is Wikibase?</li>
+                <ul class="fragment roll-in highlight-current-green">
+                    <li>Wikibase Repository</li>
+                    <li>Wikibase Client</li>
+                    <li>The components</li>
+                </ul>
+                <li class="fragment roll-in highlight-current-green">The future and interoperability with SMW</li>
+                <li class="fragment roll-in highlight-current-green">Questions</li>
+            </ul>
+        </section>
+
+        <section>
+            <p>What is Wikibase?</p>
+            <img src="img/wikibase.jpg" />
+            <!-- Software behind Wikidata -->
+            <!-- Developed by WMDE -->
+            <!-- Open source -->
+            <!-- Apps and components -->
+        </section>
+
+        <section>
+            <section>
+                <p>Wikibase Repository</p>
+                <!-- Entity base -->
+                <!-- Integration with MediaWiki: history and diffs -->
+                <!-- No wikitext -->
+                <!-- The data model -->
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <p>Wikibase Client</p>
+                <!-- Access Repository data via parser function or Lua -->
+                <!-- Change prop: local db access needed -->
+            </section>
+        </section>
+
+        <!-- Examples of cool things build on top of WD -->
+
+        <section>
+            <section>
+                <p>The components</p>
+                <!-- Overview -->
+                <!-- DataModel & Serialization -->
+                <!-- DataValues (+ SMW) -->
+                <!-- QueryEngine (+ SMW) -->
+                <!-- Ask (+ SMW) -->
+            </section>
+        </section>
+
+        <section data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
+            <p>
+                <img src="img/cat_question2.jpg" />
+
+                <br /><br />bit.ly/wikibase-smwcon<br /><br />
+            </p>
+        </section>
+
+        <section data-state="blackout" data-transition="linear">
+            <h3>Special:Links</h3>
+            <ul>
+                <li><a href="http://bit.ly/wikibase-smwcon">View slides bit.ly/wikibase-smwcon</a></li>
+                <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
+                <li><a href="http://wikiba.se">wikiba.se</a></li>
+            </ul>
+        </section>
+
+        <section data-state="blackout">
+            <h3>Special:Attribution</h3>
+            <ul>
+                <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+                <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2014 Hakim El Hattab</li>
+            </ul>
+        </section>
+
     </div>
 
 </div>
