Work on DM slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -76,18 +76,108 @@
         </section>
 
         <section>
+            <div style="border: 2px solid red; padding: 5px; overflow: hidden">
+                <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
+                    <table>
+                        <tr class="fragment highlight-current-green" data-fragment-index="1">
+                            <td width="300px">
+                                <p style="text-align: left">Population</p>
+                            </td>
+                            <td>
+                                <p>3 500 000</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px" class="fragment roll-in highlight-current-green" data-fragment-index="2">
+                                <small style="white-space: nowrap">
+                                    Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014<br />
+                                    Method &nbsp;&nbsp;&nbsp;Estimation
+                                </small>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div style="margin-left: 65%">
+                    <p style="text-align: right; font-size: medium" class="fragment roll-in highlight-current-green" data-fragment-index="3">
+                        [2 sources]
+                    </p>
+                    <p style="text-align: right; font-size: medium; position: relative; bottom: 5px;" class="fragment roll-in highlight-current-green" data-fragment-index="4">
+                        Rank: preferred
+                    </p>
+                </div>
+            </div>
+
+            <br />
+
+            <div style="border: 2px solid red; padding: 5px; overflow: hidden" class="fragment" data-fragment-index="5">
+                <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
+                    <table>
+                        <tr>
+                            <td width="300px">
+                                <p style="text-align: left">Population</p>
+                            </td>
+                            <td>
+                                <p>3 000 000</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px">
+                                <small style="white-space: nowrap">
+                                    Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012
+                                </small>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div style="margin-left: 65%">
+                    <p style="text-align: right; font-size: medium">
+                        [1 source]
+                    </p>
+                    <p style="text-align: right; font-size: medium; position: relative; bottom: 5px;" data-fragment-index="4">
+                        Rank: deprecated
+                    </p>
+                </div>
+            </div>
+
+            <br />
+            <ul>
+                <li class="fragment roll-in highlight-current-green" data-fragment-index="1">Property & value (the main snak)</li>
+                <li class="fragment roll-in highlight-current-green" data-fragment-index="2">Zero or more qualifiers (snaks)</li>
+                <li class="fragment roll-in highlight-current-green" data-fragment-index="3">Zero or more references (lists of snaks)</li>
+                <li class="fragment roll-in highlight-current-green" data-fragment-index="4">A rank</li>
+            </ul>
+        </section>
+
+        <section>
+            <section>
+                <p>Concept</p>
+                <!-- Central entity base -->
+                <!-- The data model -->
+                    <!-- qualified -->
+                    <!-- referenced -->
+                    <!-- multilingual -->
+            </section>
+        </section>
+
+        <section>
             <section>
                 <p>Wikibase Repository</p>
+                <!-- MediaWiki extension -->
                 <!-- Entity base -->
-                <!-- Integration with MediaWiki: history and diffs -->
-                <!-- No wikitext -->
-                <!-- The data model -->
+                <!-- Integration with MediaWiki -->
+                    <!-- Storage as wiki pages: revisioned -->
+                    <!-- Page UI: reverting, diffs, watching, recent changes -->
+                    <!-- Page UI: No wikitext -->
+                    <!-- Web API -->
             </section>
         </section>
 
         <section>
             <section>
                 <p>Wikibase Client</p>
+                <!-- MediaWiki extension -->
                 <!-- Access Repository data via parser function or Lua -->
                 <!-- Change prop: local db access needed -->
             </section>
