--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -55,7 +55,7 @@
         <section>
             <h3>Overview</h3>
             <ul>
-                <li class="fragment highlight-current-green">What is Wikibase?</li>
+                <li class="fragment roll-in highlight-current-green">What is Wikibase?</li>
                 <ul class="fragment roll-in highlight-current-green">
                     <li>Wikibase Repository</li>
                     <li>Wikibase Client</li>
@@ -76,88 +76,190 @@
         </section>
 
         <section>
-            <div style="border: 2px solid red; padding: 5px; overflow: hidden">
-                <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
-                    <table>
-                        <tr class="fragment highlight-current-green" data-fragment-index="1">
-                            <td width="300px">
-                                <p style="text-align: left">Population</p>
-                            </td>
-                            <td>
-                                <p>3 500 000</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px" class="fragment roll-in highlight-current-green" data-fragment-index="2">
-                                <small style="white-space: nowrap">
-                                    Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014<br />
-                                    Method &nbsp;&nbsp;&nbsp;Estimation
-                                </small>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div style="margin-left: 65%">
-                    <p style="text-align: right; font-size: medium" class="fragment roll-in highlight-current-green" data-fragment-index="3">
-                        [2 sources]
-                    </p>
-                    <p style="text-align: right; font-size: medium; position: relative; bottom: 5px;" class="fragment roll-in highlight-current-green" data-fragment-index="4">
-                        Rank: preferred
-                    </p>
-                </div>
-            </div>
+            <section data-state="blackout" data-transition="linear">
+                <p>The data model</p>
+            </section>
 
-            <br />
-
-            <div style="border: 2px solid red; padding: 5px; overflow: hidden" class="fragment" data-fragment-index="5">
-                <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
-                    <table>
-                        <tr>
-                            <td width="300px">
-                                <p style="text-align: left">Population</p>
-                            </td>
-                            <td>
-                                <p>3 000 000</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px">
-                                <small style="white-space: nowrap">
-                                    Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012
-                                </small>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div style="margin-left: 65%">
-                    <p style="text-align: right; font-size: medium">
-                        [1 source]
-                    </p>
-                    <p style="text-align: right; font-size: medium; position: relative; bottom: 5px;" data-fragment-index="4">
-                        Rank: deprecated
-                    </p>
-                </div>
-            </div>
-
-            <br />
-            <ul>
-                <li class="fragment roll-in highlight-current-green" data-fragment-index="1">Property & value (the main snak)</li>
-                <li class="fragment roll-in highlight-current-green" data-fragment-index="2">Zero or more qualifiers (snaks)</li>
-                <li class="fragment roll-in highlight-current-green" data-fragment-index="3">Zero or more references (lists of snaks)</li>
-                <li class="fragment roll-in highlight-current-green" data-fragment-index="4">A rank</li>
-            </ul>
-        </section>
-
-        <section>
             <section>
-                <p>Concept</p>
-                <!-- Central entity base -->
-                <!-- The data model -->
-                    <!-- qualified -->
-                    <!-- referenced -->
-                    <!-- multilingual -->
+                <h4>Items</h4><br />
+
+                <div style="border: 2px solid red; padding: 5px; overflow: hidden">
+                    <p style="text-align: left" class="fragment roll-in highlight-current-green" data-fragment-index="0">Q64</p>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="1">
+                        Fingerprint
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in" data-fragment-index="1">
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 25%" class="fragment roll-in highlight-current-green" data-fragment-index="2">
+                                <p style="text-align: left">
+                                    Berlin [en]<br />
+                                    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Berlijn [nl]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 42%" class="fragment roll-in highlight-current-green" data-fragment-index="3">
+                                <p style="text-align: left">
+                                    Capital city of Germany [en]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hauptstadt von Deutschland [de]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 33%" class="fragment roll-in highlight-current-green" data-fragment-index="4">
+                                <p style="text-align: left">
+                                    "Berlin, Germany", ... [en]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stadt Berlin, ... [de]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="5">
+                        Sitelinks
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in highlight-current-green" data-fragment-index="5">
+                        <tr>
+                            <td width="45%">
+                                <p style="text-align: left">en.wikipedia</p>
+                            </td>
+                            <td>
+                                <p>Berlin</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="text-align: left">nl.wikipedia</p>
+                            </td>
+                            <td>
+                                <p>Berlijn</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="text-align: left">de.wikivoyage</p>
+                            </td>
+                            <td>
+                                <p>Berlin</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="text-align: left">...</p>
+                            </td>
+                            <td>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="6">
+                        Statements
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in highlight-current-green" data-fragment-index="6">
+                        <tr>
+                            <td width="45%" style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">Population ...</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">Date &nbsp;of &nbsp;founding ...</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">...</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+
+            <section>
+                <h4>Statements</h4><br />
+
+                <div style="border: 2px solid red; padding: 5px; overflow: hidden">
+                    <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
+                        <table>
+                            <tr class="fragment highlight-current-green" data-fragment-index="1">
+                                <td width="300px">
+                                    <p style="text-align: left">Population</p>
+                                </td>
+                                <td>
+                                    <p>3 500 000</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px" class="fragment roll-in highlight-current-green" data-fragment-index="2">
+                                    <small style="white-space: nowrap">
+                                        Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014<br />
+                                        Method &nbsp;&nbsp;&nbsp;Estimation
+                                    </small>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div style="margin-left: 65%">
+                        <p style="text-align: right; font-size: large" class="fragment roll-in highlight-current-green" data-fragment-index="3">
+                            [2 sources]
+                        </p>
+                        <p style="text-align: right; font-size: large;" class="fragment roll-in highlight-current-green" data-fragment-index="4">
+                            Rank: preferred
+                        </p>
+                    </div>
+                </div>
+
+                <br />
+
+                <div style="border: 2px solid red; padding: 5px; overflow: hidden" class="fragment" data-fragment-index="5">
+                    <div style="border: 2px solid red; width: 60%; padding: 5px; overflow: hidden; float: left" class="fragment" data-fragment-index="1">
+                        <table>
+                            <tr>
+                                <td width="300px">
+                                    <p style="text-align: left">Population</p>
+                                </td>
+                                <td>
+                                    <p>3 000 000</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td style="border: 2px solid red; padding-left: 5px;padding-bottom: 5px; width:200px">
+                                    <small style="white-space: nowrap">
+                                        Year &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012
+                                    </small>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div style="margin-left: 65%">
+                        <p style="text-align: right; font-size: large">
+                            [1 source]
+                        </p>
+                        <p style="text-align: right; font-size: large;" data-fragment-index="4">
+                            Rank: deprecated
+                        </p>
+                    </div>
+                </div>
+
+                <br />
+                <ul>
+                    <li class="fragment roll-in highlight-current-green" data-fragment-index="1">Property & value (the main snak)</li>
+                    <li class="fragment roll-in highlight-current-green" data-fragment-index="2">Zero or more qualifiers (snaks)</li>
+                    <li class="fragment roll-in highlight-current-green" data-fragment-index="3">Zero or more references (lists of snaks)</li>
+                    <li class="fragment roll-in highlight-current-green" data-fragment-index="4">A rank</li>
+                </ul>
+            </section>
+
+            <section>
+
             </section>
         </section>
 
