Add properties slide

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -117,11 +117,34 @@
                         </tr>
                     </table>
 
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="6">
+                        Statements
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in highlight-current-green" data-fragment-index="6">
+                        <tr>
+                            <td width="45%" style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">Population ...</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">Date &nbsp;of &nbsp;founding ...</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">...</p>
+                            </td>
+                        </tr>
+                    </table>
+
                     <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="5">
                         Sitelinks
                     </p>
 
-                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                    <table style="border: 2px solid gray; padding: 5px; overflow: hidden; width: 100%; font-size: large"
                            class="fragment roll-in highlight-current-green" data-fragment-index="5">
                         <tr>
                             <td width="45%">
@@ -152,29 +175,6 @@
                                 <p style="text-align: left">...</p>
                             </td>
                             <td>
-                            </td>
-                        </tr>
-                    </table>
-
-                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="6">
-                        Statements
-                    </p>
-
-                    <table style="border: 2px solid gray; padding: 5px; overflow: hidden; width: 100%; font-size: large"
-                           class="fragment roll-in highlight-current-green" data-fragment-index="6">
-                        <tr>
-                            <td width="45%" style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
-                                <p style="text-align: left">Population ...</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="border: 1px solid gray; padding-left: 5px; padding-top: 5px">
-                                <p style="text-align: left">Date &nbsp;of &nbsp;founding ...</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding-left: 5px; padding-top: 5px">
-                                <p style="text-align: left">...</p>
                             </td>
                         </tr>
                     </table>
@@ -259,7 +259,84 @@
             </section>
 
             <section>
+                <h4>Snaks</h4>
 
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">Value snak (Population is 300 000)</li>
+                    <li class="fragment roll-in highlight-current-green">No value snak (Date of death has no value)</li>
+                    <li class="fragment roll-in highlight-current-green">Some value snak (Date of death has an unknown value)</li>
+                </ul>
+
+                <p class="fragment"><br />All snaks have a Property ID</p>
+            </section>
+
+            <section>
+                <h4>Properties</h4><br />
+
+                <div style="border: 2px solid red; padding: 5px; overflow: hidden">
+                    <p style="text-align: left" class="fragment roll-in highlight-current-green" data-fragment-index="0">P47</p>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="1">
+                        Fingerprint
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in" data-fragment-index="1">
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 25%">
+                                <p style="text-align: left">
+                                    shares border with [en]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 42%">
+                                <p style="text-align: left">
+                                    some text to long to fit here [en]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                            <td style="padding-left: 5px; padding-top: 5px; width: 33%">
+                                <p style="text-align: left">
+                                    borders, bordered by ... [en]<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="2">
+                        Statements
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in highlight-current-green" data-fragment-index="2">
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">...</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">...</p>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p style="font-size: large; text-align: left; font-weight: bold" class="fragment roll-in highlight-current-green" data-fragment-index="3">
+                        Data type
+                    </p>
+
+                    <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
+                           class="fragment roll-in highlight-current-green" data-fragment-index="3">
+                        <tr>
+                            <td style="padding-left: 5px; padding-top: 5px">
+                                <p style="text-align: left">Item</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+                <p class="fragment"><br />Types such as: Item, String, Quantity, IRI, etc</p>
             </section>
         </section>
 
