Add to outline of Wikibase slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -262,9 +262,18 @@
                 <h4>Snaks</h4>
 
                 <ul>
-                    <li class="fragment roll-in highlight-current-green">Value snak (Population is 300 000)</li>
-                    <li class="fragment roll-in highlight-current-green">No value snak (Date of death has no value)</li>
-                    <li class="fragment roll-in highlight-current-green">Some value snak (Date of death has an unknown value)</li>
+                    <li class="fragment">
+                        Population is 300 000
+                        <span class="fragment">&#10140; Value snak</span>
+                    </li>
+                    <li class="fragment">
+                        Date of death has no value
+                        <span class="fragment">&#10140; No value snak</span>
+                    </li>
+                    <li class="fragment">
+                        Date of death has an unknown value
+                        <span class="fragment">&#10140; Some value snak</span>
+                    </li>
                 </ul>
 
                 <p class="fragment"><br />All snaks have a Property ID</p>
@@ -283,13 +292,13 @@
                     <table style="border: 2px solid gray; padding: 5px; margin-bottom: 15px; overflow: hidden; width: 100%; font-size: large"
                            class="fragment roll-in" data-fragment-index="1">
                         <tr>
-                            <td style="padding-left: 5px; padding-top: 5px; width: 25%">
+                            <td style="padding-left: 5px; padding-top: 5px; width: 30%">
                                 <p style="text-align: left">
                                     shares border with [en]<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
                                 </p>
                             </td>
-                            <td style="padding-left: 5px; padding-top: 5px; width: 42%">
+                            <td style="padding-left: 5px; padding-top: 5px; width: 37%">
                                 <p style="text-align: left">
                                     some text to long to fit here [en]<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...
@@ -341,31 +350,76 @@
         </section>
 
         <section>
-            <section>
+            <section data-state="blackout" data-transition="linear">
                 <p>Wikibase Repository</p>
-                <!-- MediaWiki extension -->
-                <!-- Entity base -->
-                <!-- Integration with MediaWiki -->
-                    <!-- Storage as wiki pages: revisioned -->
-                    <!-- Page UI: reverting, diffs, watching, recent changes -->
-                    <!-- Page UI: No wikitext -->
-                    <!-- Web API -->
+
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">MediaWiki extension</li>
+                    <li class="fragment roll-in highlight-current-green">Build on top of DataModel and other components</li>
+                    <li class="fragment roll-in highlight-current-green">Entity base</li>
+                </ul>
+            </section>
+
+            <section>
+                <p>Picture of Item page be here</p>
+            </section>
+
+            <section>
+                <p>Picture of revision page be here</p>
+            </section>
+
+            <section>
+                <p>Picture of diff be here</p>
+            </section>
+
+            <section>
+                <p>Picture recent changes be here</p>
+            </section>
+
+            <section>
+                <p>Picture of Item page be here</p>
+                <!-- Page UI: No wikitext -->
+            </section>
+
+            <section>
+                <p>Picture of web API be here</p>
             </section>
         </section>
 
         <section>
-            <section>
+            <section data-state="blackout" data-transition="linear">
                 <p>Wikibase Client</p>
-                <!-- MediaWiki extension -->
-                <!-- Access Repository data via parser function or Lua -->
-                <!-- Change prop: local db access needed -->
+
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">MediaWiki extension</li>
+                    <li class="fragment roll-in highlight-current-green">Build on top of DataModel and other components</li>
+                    <li class="fragment roll-in highlight-current-green">Embedding data into wiki pages</li>
+                </ul>
+            </section>
+
+            <section>
+                <p>Picture of parser function be here</p>
+            </section>
+
+            <section>
+                <p>Picture of Lua be here</p>
+            </section>
+
+            <section>
+                <p>Picture sidebar be here</p>
+            </section>
+
+            <section>
+                <p>Local DB access needed</p>
             </section>
         </section>
 
-        <!-- Examples of cool things build on top of WD -->
+        <section>
+            <!-- Examples of cool things build on top of WD -->
+        </section>
 
         <section>
-            <section>
+            <section data-state="blackout" data-transition="linear">
                 <p>The components</p>
                 <!-- Overview -->
                 <!-- DataModel & Serialization -->
