Add to outline of Wikibase slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -422,10 +422,22 @@
             <section data-state="blackout" data-transition="linear">
                 <p>The components</p>
                 <!-- Overview -->
-                <!-- DataModel & Serialization -->
-                <!-- DataValues (+ SMW) -->
-                <!-- QueryEngine (+ SMW) -->
-                <!-- Ask (+ SMW) -->
+            </section>
+
+            <section>
+                <p>DataModel & Serialization</p>
+            </section>
+
+            <section>
+                <p>DataValues (+ SMW)</p>
+            </section>
+
+            <section>
+                <p>QueryEngine (+ SMW)</p>
+            </section>
+
+            <section>
+                <p>Ask (+ SMW)</p>
             </section>
         </section>
 
